# toolchains_avr

./: MODULE.bazel  README.md
avr/: BUILD  defs.bzl  extensions.bzl  hosts.bzl
avr/platform/: BUILD
avr/private/: BUILD  avrdude.bzl  binary.bzl  firmware.bzl  mcus.bzl
cc/: BUILD  avr_action_names.bzl  defs.bzl  extensions.bzl
cc/private/: BUILD  BUILD.toolchains  archives.bzl  repositories.bzl
cc/toolchain/: BUILD  BUILD.distro_files
examples/blinkie/: .clang-format  .gitignore  BUILD  MODULE.bazel  README.md
examples/blinkie-rs/: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  rust_analyzer.sh
examples/blinkie-rs/.zed/: settings.json
examples/blinkie-rs/firmware/barebones/: BUILD
examples/blinkie-rs/firmware/barebones/src/: main.rs
examples/blinkie-rs/firmware/basic-pac/: BUILD
examples/blinkie-rs/firmware/basic-pac/src/: main.rs
examples/blinkie-rs/firmware/hello/: BUILD
examples/blinkie-rs/firmware/hello/src/: main.rs
examples/blinkie-rs/firmware/interrupts/: BUILD
examples/blinkie-rs/firmware/interrupts/src/: main.rs
examples/blinkie-rs/src/hello/: BUILD  hello_main.rs
examples/blinkie/src/hello/: BUILD  hello_main.c
examples/blinkie/src/pulse/: BUILD  README.md  button.c  button.h  led.c  led.h  pulse_led_main.c
rust/: BUILD  defs.bzl  extensions.bzl  rust_project.bzl  tools.bzl
rust/config/: BUILD
rust/private/: BUILD  BUILD.rust_src  BUILD.toolchains  gen_rust_project.sh  repositories.bzl  sysroot.bzl
tools/: build_cc_toolchain.sh
