# Copyright 2026 The toolchains_avr authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "blinkie_rs",
    version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.19")

# rules_rust listed before toolchains_avr intentionally — the rust.toolchain
# target_settings below ensures rules_rust's host toolchain only fires outside
# of AVR exec configs, so ordering no longer causes a proc-macro ABI mismatch.
bazel_dep(name = "rules_rust", version = "0.71.1")
bazel_dep(name = "toolchains_avr", version = "0.0.0", repo_name = "avr")
local_path_override(
    module_name = "toolchains_avr",
    path = "../..",
)

avr = use_extension("@avr//avr:extensions.bzl", "avr")
avr.cc_toolchain(
    distro = "avr-toolchain-gcc15.2.0-libc2.3.1-binutils2.46",
)
avr.rust_toolchain(
    edition = "2024",
    nightly_stamp = "2026-06-18",
)
use_repo(avr, "avr_cc_toolchains", "avr_rust_analyzer_tools", "avr_rust_host_tools", "avr_rust_toolchains")

register_toolchains(
    "@avr_cc_toolchains//:all",
    "@avr_rust_toolchains//:all",
)

# Restrict rules_rust's bundled host Rust toolchain to non-AVR configurations.
# In AVR exec contexts (where proc-macros run) avr=True so is_host=False and
# rules_rust's toolchain is ineligible — our host_rust_toolchain_def wins.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    target_settings = ["@avr//rust/config:is_host"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    branch = "main",
    features = [
        "avr128db48",
        "rt",
    ],
    git = "https://github.com/Rahix/avr-device",
    package = "avr-device",
)
crate.render_config(
    generate_target_compatible_with = False,
)
crate.from_specs(
    name = "avr_crates",
    host_tools = "@avr_rust_host_tools",
)
use_repo(crate, "avr_crates")
